<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <groupId>com.softserve.teachua</groupId>
    <artifactId>TeachTAQC</artifactId>
    <version>1.0</version>

    <packaging>jar</packaging>

    <name>${project.artifactId}</name>
    <url>http://maven.apache.org</url>
    <description>TeachUA</description>

    <properties>
        <!-- - - - - - Encoding - - - - - -->
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <!-- - - - - - Java - - - - - -->
        <java.version>17</java.version>
        <!-- - - - - - Reports - - - - - -->
        <testng.reports.directory>./target/surefire-reports/test-output</testng.reports.directory>
        <aspectj.version>1.9.19</aspectj.version>
        <!-- - - - - - Password - - - - - -->
        <application.password>null123</application.password>
        <!-- - - - - - Logging - - - - - -->
        <org.slf4j.version>2.0.7</org.slf4j.version>
        <!-- - - - - - Tests - - - - - -->
        <junit-jupiter.version>5.9.3</junit-jupiter.version>
        <skipTests>false</skipTests>
        <skipUnitTests>${skipTests}</skipUnitTests>
        <skipIntegrationTests>${skipTests}</skipIntegrationTests>
    </properties>

    <dependencies>
        <!-- - - - - - Tests - - - - - -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>${junit-jupiter.version}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-params</artifactId>
            <version>${junit-jupiter.version}</version>
            <scope>test</scope>
        </dependency>

<!--        <dependency>-->
<!--            <groupId>org.junit.platform</groupId>-->
<!--            <artifactId>junit-platform-runner</artifactId>-->
<!--            <version>1.9.3</version>-->
<!--            <scope>test</scope>-->
<!--        </dependency>-->

        <!-- - - - - - DB - - - - - -->
        <dependency>
            <groupId>com.mysql</groupId>
            <artifactId>mysql-connector-j</artifactId>
            <version>8.0.33</version>
        </dependency>

        <dependency>
            <groupId>org.postgresql</groupId>
            <artifactId>postgresql</artifactId>
            <version>42.6.0</version>
        </dependency>

        <dependency>
            <groupId>com.h2database</groupId>
            <artifactId>h2</artifactId>
            <version>2.1.214</version>
            <!-- <scope>test</scope> -->
        </dependency>

        <!-- - - - - - Mocks - - - - - -->
        <!--
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <version>4.5.1</version>
            <scope>test</scope>
        </dependency>
        -->

        <dependency>
            <groupId>org.powermock</groupId>
            <artifactId>powermock-core</artifactId>
            <version>2.0.9</version>
            <scope>test</scope>
        </dependency>


        <dependency>
            <groupId>org.powermock</groupId>
            <artifactId>powermock-api-mockito2</artifactId>
            <version>2.0.9</version>
            <!--             <version>1.7.4</version>-->
            <scope>test</scope>
        </dependency>

        <!--
        <dependency>
            <groupId>org.powermock</groupId>
            <artifactId>powermock-api-support</artifactId>
            <version>2.0.9</version>
            <scope>test</scope>
        </dependency>
        -->

        <!--    <dependency>-->
        <!--      <groupId>org.powermock</groupId>-->
        <!--      <artifactId>powermock-module-testng</artifactId>-->
        <!--      <version>2.0.9</version>-->
        <!--             <version>1.7.4</version>-->
        <!--      <scope>test</scope>-->
        <!--    </dependency>-->

        <!--
        <dependency>
          <groupId>org.mockito</groupId>
          <artifactId>mockito-junit-jupiter</artifactId>
          <version>4.5.1</version>
          <scope>test</scope>
        </dependency>
        -->

        <!-- - - - - - Automation - - - - - -->
        <!-- <dependency> -->
        <!-- <groupId>org.seleniumhq.selenium</groupId> -->
        <!-- <artifactId>selenium-server</artifactId> -->
        <!-- <version>3.141.59</version> -->
        <!-- <scope>test</scope> -->
        <!-- </dependency> -->

        <dependency>
            <groupId>org.seleniumhq.selenium</groupId>
            <artifactId>selenium-java</artifactId>
            <!-- <version>4.1.4</version>-->
            <!-- <version>4.8.2</version>-->
            <version>4.9.1</version>
            <scope>test</scope>
        </dependency>

        <!--    <dependency>-->
        <!--      <groupId>org.seleniumhq.selenium</groupId>-->
        <!--      <artifactId>selenium-http-jdk-client</artifactId>-->
        <!--      <version>4.8.2</version>-->
        <!--    </dependency>-->

        <dependency>
            <groupId>io.github.bonigarcia</groupId>
            <artifactId>webdrivermanager</artifactId>
            <version>5.3.3</version>
            <!-- <version>4.4.3</version>-->
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.seleniumhq.selenium</groupId>
            <artifactId>htmlunit-driver</artifactId>
            <!-- <version>3.61.0</version>-->
            <version>4.9.0</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>com.codeborne</groupId>
            <artifactId>phantomjsdriver</artifactId>
            <version>1.5.0</version>
        </dependency>

        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.18.26</version>
        </dependency>

        <!-- - - - Read from Excel formats, etc. - - - -->
        <dependency>
            <groupId>org.apache.poi</groupId>
            <artifactId>poi-ooxml</artifactId>
            <version>5.2.3</version>
        </dependency>

        <dependency>
            <groupId>org.apache.poi</groupId>
            <artifactId>poi</artifactId>
            <version>5.2.3</version>
        </dependency>

        <!-- - - - - - JSON - - - - - -->
        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>2.10.1</version>
        </dependency>

        <!-- - - - Logger - - - -->
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>${org.slf4j.version}</version>
            <scope>compile</scope>
        </dependency>

        <dependency>
            <groupId>org.slf4j</groupId>
            <!-- <artifactId>slf4j-log4j12</artifactId>-->
            <artifactId>slf4j-reload4j</artifactId>
            <version>${org.slf4j.version}</version>
            <scope>runtime</scope>
        </dependency>

        <!-- - - - Reports - - - -->

        <dependency>
            <groupId>org.aspectj</groupId>
            <artifactId>aspectjweaver</artifactId>
            <version>${aspectj.version}</version>
            <!--      <version>1.9.19</version>-->
            <!-- <scope>test</scope> -->
        </dependency>

        <!-- Apache Commons IO library  -->
        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
            <version>2.11.0</version>
        </dependency>

    </dependencies>

    <build>
        <finalName>${project.artifactId}</finalName>

        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-checkstyle-plugin</artifactId>
                <version>3.2.2</version>
                <executions>
                    <execution>
                        <id>check</id>
                        <phase>validate</phase>
                        <goals>
                            <goal>check</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <configLocation>checkstyle.xml</configLocation>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <version>3.3.1</version>
                <configuration>
                    <encoding>${project.build.sourceEncoding}</encoding>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                    <encoding>${project.build.sourceEncoding}</encoding>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.1.0</version>
                <configuration>
                    <skipTests>${skipUnitTests}</skipTests>
                    <includes>
                        <include>**/*Test.java</include>
                    </includes>
                    <systemPropertyVariables>
                        <surefire.application.password>
                            ${application.password}
                        </surefire.application.password>
                    </systemPropertyVariables>
                </configuration>
            </plugin>

            <plugin>
                <groupId>net.revelc.code.formatter</groupId>
                <artifactId>formatter-maven-plugin</artifactId>
                <version>2.22.0</version>
            </plugin>

        </plugins>
    </build>

</project>
